--- a/index2.html
+++ b/index2.html
@@ -237,12 +237,12 @@ z-index:9;
 position:relative;
 }
 :root{
-  --primary-color:black;
+  --primary-color:#16161d;
   --secondary-color:white;
 }
 .dark-theme{
   --primary-color:white;
-  --secondary-color:black;
+  --secondary-color:#16161d;
 }
 
 #icon{
@@ -256,6 +256,7 @@ position:relative;
 }
 .navbar{
   background-color:rgba(0,0,0, 0.87);
+  
   color: #FFFFFF;
 }
 
@@ -863,13 +864,13 @@ color: white;
 }
 
 
-/* news website */
+/* news website #16161d */
 .div0{
-  background-color: #25252a;
+  background-color:#fff;
   font-family: 'Ubuntu', sans-serif;
   width: 100%;
   min-height: 100vh;
-  color: #fff;
+  color: black;
   overflow-y: overlay;
 }
 ::-webkit-scrollbar{
@@ -897,7 +898,7 @@ color: white;
   align-items: center;
   width: 100%;
   padding: 20px 50px;
-  background-color: #0b0b11;
+  background-color:var(--secondary-color);
   transition: 0.3s;
 }
 .header1.sticky{
@@ -906,8 +907,14 @@ color: white;
 }
 .logo1{
   font-size: 45px;
+  font-family: "Lucida Handwriting";
   font-weight: 700;
   cursor: pointer;
+  border:4px solid var(--primary-color);
+  border-radius:50px;
+  padding-left:10px;
+  padding-right: 20px;
+  color:var(--primary-color);
 }
 .header1 nav ul{
   display: flex;
@@ -951,8 +958,9 @@ color: white;
 .topHeadlines1{
   padding: 100px 50px 50px;
   width: 100%;
-  margin-top:-50px;
+  margin-top:-70px;
   display: grid;
+  background:var(--secondary-color);
   grid-template-columns: 1.5fr 1fr;
 }
 .topHeadlines1 .left{
@@ -962,6 +970,7 @@ color: white;
   font-size: 20px;
   padding: 15px;
   text-align: center;
+  color:var(--primary-color);
 }
 .topHeadlines1 .left .img{
   width: 100%;
@@ -980,7 +989,7 @@ color: white;
 }
 .topHeadlines1 .left .text1 .title1 a h2{
   font-size: 20px;
-  color: #fff;
+  color:var(--primary-color);
   letter-spacing: 1px;
   display: inline;
   cursor: pointer;
@@ -992,7 +1001,7 @@ color: white;
 .topHeadlines1 .left .text1 .description{
   font-size: 15px;
   margin-top: 10px;
-  color: #aaa;
+  color:var(--primary-color);
   letter-spacing: 1px;
 }
 .topHeadlines1 .right{
@@ -1004,11 +1013,12 @@ color: white;
   font-size: 20px;
   padding: 15px;
   text-align: center;
+  color:var(--primary-color);
 }
 .topHeadlines1 .right .topNews{
   padding: 7px;
   height: 600px;
-  border: 1px solid #fff;
+  border: 1px solid var(--primary-color);
   border-radius: 4px;
   overflow-y: scroll;
 }
@@ -1017,7 +1027,7 @@ color: white;
   grid-template-columns: auto auto;
   align-items: center;
   margin-bottom: 20px;
-  border-bottom:0.5px solid;
+  border-bottom:0.5px solid var(--primary-color);
 }
 .topHeadlines1 .right .topNews .news .img{
   width: 170px;
@@ -1039,18 +1049,21 @@ color: white;
   text-decoration: none;
 }
 .topHeadlines1 .right .topNews .news .text1 .title1 a p{
-  color: #fff;
+  color:var(--primary-color);
   display: inline;
 }
 .topHeadlines1 .right .topNews .news .text1 .title1 a p:hover{
   text-decoration: underline;
 } 
-
+.title1 h2{
+  color:var(--primary-color);
+}
 .page2{
   width: 100%;
-  background-color: #16161d;
+  background-color: var(--secondary-color);
   min-height: 100vh;
   padding: 50px;
+  border-top:2px solid var(--primary-color);
 }
 .page2 .news{
   padding: 30px 0;
@@ -1059,6 +1072,7 @@ color: white;
 .page2 .news:last-child{
   padding: 30px 0;
   border-bottom: none;
+  margin-top:-50px;
 }
 .page2 .news > .title h2{
   font-size: 40px;
@@ -1083,6 +1097,12 @@ color: white;
   height: 150px;
   background-color: #a04;
   border-radius: 5px;
+}
+.title1 p {
+    font-size: 17px;
+    margin: 12px 0 0;
+    line-height: 24px;
+    color:var(--primary-color);
 }
 .page2 .news .newsBox .newsCard .img img{
   width: 100%;
@@ -1387,6 +1407,7 @@ color: white;
 @media (max-width:600px) {
   .logo1 {
       font-size: 35px;
+      margin:auto;
   }
   .topHeadlines1 .left {
       padding: 10px 0px;
